# alembic

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  miri.yml  release.yml
crates/alembic-adapter-generic/: Cargo.toml
crates/alembic-adapter-generic/src/: lib.rs
crates/alembic-adapter-nautobot/: Cargo.toml
crates/alembic-adapter-nautobot/src/: lib.rs
crates/alembic-adapter-nautobot/src/nautobot/: client.rs  mapping.rs  mod.rs  ops.rs  registry.rs  state.rs
crates/alembic-adapter-netbox/: Cargo.toml
crates/alembic-adapter-netbox/src/: lib.rs  netbox.rs
crates/alembic-adapter-netbox/src/netbox/: client.rs  mapping.rs  mod.rs  ops.rs  registry.rs  state.rs
crates/alembic-adapter-peeringdb/: Cargo.toml
crates/alembic-adapter-peeringdb/src/: lib.rs
crates/alembic-cli/: Cargo.toml
crates/alembic-cli/src/: main.rs
crates/alembic-cli/src/app/: mod.rs  test_support.rs
crates/alembic-cli/tests/: cast_django_e2e.rs
crates/alembic-cli/tests/support/: mod.rs
crates/alembic-core/: Cargo.toml
crates/alembic-core/src/: ir.rs  lib.rs  validation.rs
crates/alembic-engine/: Cargo.toml
crates/alembic-engine/src/: django.rs  extract.rs  lib.rs  lint.rs  loader.rs  pipeline.rs  planner.rs  projection.rs  retort.rs  state.rs  tests.rs  types.rs
crates/alembic-engine/templates/: admin.py.tpl  models.py.tpl  serializers.py.tpl  urls.py.tpl  views.py.tpl
docs/: brew.md  cast.md  cli.md  development.md  engine.md  index.md  ir.md  nautobot.md  netbox.md  plan.md  projection.md  retort.md  state.md
docs/case-studies/: 01-basic-dcim-ipam.md  02-tenant-vrf-vlan.md  03-circuits.md  04-model-to-netbox.md  05-import-csv.md  06-django-dcim.md  README.md
examples/: brew-generic.yaml  brew.yaml  empty.yaml  multi-emit-raw.yaml  multi-emit.yaml  nautobot.yaml  projection-netbox.yaml  raw.yaml  retort.yaml
fixtures/: minimal.yaml  relations.yaml
scripts/: ci.sh
