[package]
name = "alembic-adapter-netbox"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
alembic-core = { path = "../alembic-core" }
alembic-engine = { path = "../alembic-engine" }
anyhow.workspace = true
async-trait.workspace = true
netbox.workspace = true
serde_json.workspace = true
