[package]
name = "alembic-adapter-netbox"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
alembic-core = { path = "../alembic-core" }
alembic-engine = { path = "../alembic-engine" }
anyhow.workspace = true
async-trait.workspace = true
netbox.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid.workspace = true
