[package]
name = "alembic-adapter-peeringdb"
version = "0.1.0"
edition = "2021"

[dependencies]
alembic-core = { path = "../alembic-core" }
alembic-engine = { path = "../alembic-engine" }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
futures = "0.3"

[dev-dependencies]
httpmock = "0.7"