[package]
name = "alembic-adapter-peeringdb"
version = "0.1.0"
edition = "2021"

[dependencies]
alembic-core = { path = "../alembic-core" }
alembic-engine = { path = "../alembic-engine" }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
peeringdb-rs = "0.1"

[dev-dependencies]