[package]
name = "alembic-cli"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
alembic-core = { path = "../alembic-core" }
alembic-engine = { path = "../alembic-engine" }
alembic-adapter-netbox = { path = "../alembic-adapter-netbox" }
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
uuid.workspace = true
