[package]
name = "alembic-engine"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
alembic-core = { path = "../alembic-core" }
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
futures = "0.3"
